# bitpacker

./: .gitignore  CMakeLists.txt
example/: example.cpp
exampple/: example.cpp
include/: archive.hpp  bitpacker.hpp  cbor_variant.hpp  deserialize.hpp  encode.hpp  serialize.hpp  utf8.hpp
src/: CMakeLists.txt  archive.cpp  bitpacker.cpp  cbor_variant.cpp  deserialize.cpp  encode.cpp  serialize.cpp
test/: CMakeLists.txt  test_deserializers.cpp  test_serializer.cpp
